# reliary-agent

./: .gitignore  .gitleaks.toml  .markdownlint.json  AGENTS.md  CHANGELOG.md  CONFIG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.e2e  README.md  SECURITY.md  deny.toml  renovate.json
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: bench.yml  ci.yml  codeql-analysis.yml  fuzz.yml  hardening.yml  pr-secret-scan.yml  publish.yml  release.yml  scorecard.yml  size.yml
.reliary/: index.sqlite
.semgrep/: rust-security.yml
crates/reliary-agent/: Cargo.toml  README.md
crates/reliary-agent/pi/: gate.js
crates/reliary-agent/src/: antidecision.rs  chronicle.rs  color.rs  config.rs  daemon.rs  daemon.rs.perf  decompose.rs  diffuse.rs  guard.rs  heal.rs  hologram.rs  init.rs  log.rs  main.rs  mcp.rs  mcp_sse.rs  novel_compress.rs  proxy.rs  read_summary.rs  reindex.rs  routes.rs  scavenger.rs  session_state.rs  tester.rs  ux.rs  verify.rs
crates/reliary-agent/tests/: bench_compress.rs  daemon_protocol.rs  e2e_compression.rs  e2e_heal.rs  e2e_init.rs  e2e_mcp.rs  e2e_proxy.rs  e2e_proxy_mock.rs  e2e_qol.rs  e2e_stress.rs  hologram.rs  regression_v067.rs  regression_v068.rs  sr_floor.rs
crates/reliary-agent/tests/common/: mod.rs
crates/reliary-compress/: Cargo.toml  README.md
crates/reliary-compress/src/: lib.rs
crates/reliary-core/: Cargo.toml  README.md
crates/reliary-core/src/: fs_safe.rs  ingest.rs  lib.rs  session.rs  state_block.rs
crates/reliary-dead/: Cargo.toml  README.md
crates/reliary-dead/src/: lib.rs
crates/reliary-fix/: Cargo.toml  README.md
crates/reliary-fix/src/: lib.rs
crates/reliary-memory/: Cargo.toml  README.md
crates/reliary-memory/src/: lib.rs
crates/reliary-output/: Cargo.toml  README.md
crates/reliary-output/examples/: bench_compress.rs
crates/reliary-output/src/: classify.rs  collapse.rs  lib.rs
crates/reliary-output/tests/: headroom_parity.rs  real_data_bench.rs
crates/reliary-risk/: Cargo.toml  README.md
crates/reliary-risk/src/: lib.rs
crates/reliary-search/: Cargo.toml  README.md
crates/reliary-search/src/: ft_weight.rs  ingest.rs  lib.rs  schema.rs  search.rs
crates/reliary-search/tests/: ft_weight_gate.rs
crates/reliary-sift/: Cargo.toml  README.md
crates/reliary-sift/src/: classify.rs  compress_json.rs  filter.rs  lib.rs
crates/reliary-sift/tests/: aggressive_compression.rs  aggressive_skeleton.rs  smoke.rs  zone_info.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: config_fuzz.rs  proxy_fuzz.rs  tcp_fuzz.rs
npm/: bin.js  install.js  package.json
pi/: GATE.md  gate.js  reliary.js
scripts/: bench_anti.py  bench_compression.py  bench_cross_session.py  bench_deterministic.py  bench_doa.py  bench_features.py  bench_guard.py  bench_hard.py  bench_isolation.py  bench_lib.py  bench_multibug.py  bench_multibug_v2.py  bench_novel.py  bench_novel_stuff.py  bench_paired.py  bench_rename.py  bench_rust_cli.py  bench_v2.py  ci_guards.py  e2e_daemon_test.sh  e2e_init_test.sh  e2e_opencode_test.sh  generate_brew_formula.sh  install.sh  publish_oidc.sh  release.sh  sha256sums.sh  test_agent_integration.py  test_gate_levels.js
scripts/benchmarks/accuracy/: README.md  bench_bfcl.py  bench_squad.py  download_data.py
scripts/stress/: 01_tcp_concurrent.py  03_large_conversation.py  04_heal_cycle.py  05_06_sqlite.py  07_config_malformed.py  09_mutex_contention.py  run_all.py
