[workspace]
members = [
    "crates/reliary-core",
    "crates/reliary-search",
    "crates/reliary-compress",
    "crates/reliary-sift",
    "crates/reliary-risk",
    "crates/reliary-memory",
    "crates/reliary-fix",
    "crates/reliary-dead",
    "crates/reliary-agent",
    "crates/reliary-output",
]

resolver = "2"

[workspace.package]
version = "0.5.3"
edition = "2021"
description = "Grammar-free code intelligence daemon, CLI, MCP server, and API proxy."
license = "MIT"
repository = "https://github.com/Reliary/reliary-agent"
readme = "README.md"
