[workspace]
members = [
    "crates/reliary-core",
    "crates/reliary-search",
    "crates/reliary-compress",
    "crates/reliary-sift",
    "crates/reliary-risk",
    "crates/reliary-memory",
    "crates/reliary-fix",
    "crates/reliary-dead",
    "crates/reliary-agent",
    "crates/reliary-output",
]

resolver = "2"

[workspace.package]
version = "0.6.5"
edition = "2021"
description = "Grammar-free code intelligence daemon, CLI, MCP server, and API proxy."
license = "MIT"
repository = "https://github.com/Reliary/reliary-agent"
readme = "README.md"

[workspace.dependencies]
reliary-core = { version = "0.6", path = "crates/reliary-core" }
reliary-search = { version = "0.6", path = "crates/reliary-search" }
reliary-compress = { version = "0.6", path = "crates/reliary-compress" }
reliary-sift = { version = "0.6", path = "crates/reliary-sift" }
reliary-risk = { version = "0.6", path = "crates/reliary-risk" }
reliary-memory = { version = "0.6", path = "crates/reliary-memory" }
reliary-fix = { version = "0.6", path = "crates/reliary-fix" }
reliary-dead = { version = "0.6", path = "crates/reliary-dead" }
reliary-output = { version = "0.6", path = "crates/reliary-output" }
