[package]
name = "reliary-agent"
version = "0.1.0"
edition = "2021"
license = "MIT"
[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reliary-core = { path = "../reliary-core" }
reliary-search = { path = "../reliary-search" }
reliary-compress = { path = "../reliary-compress" }
reliary-sift = { path = "../reliary-sift" }
reliary-risk = { path = "../reliary-risk" }
reliary-memory = { path = "../reliary-memory" }
reliary-fix = { path = "../reliary-fix" }
reliary-dead = { path = "../reliary-dead" }
rusqlite = { version = "0.31", features = ["bundled"] }
mimalloc = "0.1"
regex = "1"
once_cell = "1"
regex-lite = "0.1"
rlimit = "0.10"
dirs = "6.0"
rustc-hash = "2"
rayon = "1"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
reqwest = { version = "0.12", features = ["stream", "json"] }
bytes = "1"
futures-util = "0.3"
