[package]
name = "reliary-agent"
version = "0.4.2"
edition = "2021"
description.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
homepage = "https://github.com/Reliary/reliary-agent"
[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reliary-core = { version = "0.4.2", path = "../reliary-core" }
reliary-search = { version = "0.4.2", path = "../reliary-search" }
reliary-compress = { version = "0.4.2", path = "../reliary-compress" }
reliary-sift = { version = "0.4.2", path = "../reliary-sift" }
reliary-risk = { version = "0.4.2", path = "../reliary-risk" }
reliary-memory = { version = "0.4.2", path = "../reliary-memory" }
reliary-fix = { version = "0.4.2", path = "../reliary-fix" }
reliary-dead = { version = "0.4.2", path = "../reliary-dead" }
reliary-output = { version = "0.4.2", path = "../reliary-output" }
rusqlite = { version = "0.31", features = ["bundled"] }
mimalloc = "0.1"
regex = "1"
once_cell = "1"
regex-lite = "0.1"
rlimit = "0.10"
dirs = "6.0"
rustc-hash = "2"
rayon = "1"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["stream", "json", "rustls-tls", "blocking"] }
bytes = "1"
futures-util = "0.3"
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }

[dev-dependencies]
tempfile = "3"
