[package]
name = "reliary-agent"
version.workspace = true
edition = "2021"
description.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
homepage = "https://github.com/Reliary/reliary-agent"
[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
clap_mangen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reliary-core.workspace = true
reliary-search.workspace = true
reliary-compress.workspace = true
reliary-sift.workspace = true
reliary-risk.workspace = true
reliary-memory.workspace = true
reliary-fix.workspace = true
reliary-dead.workspace = true
reliary-output.workspace = true
rusqlite = { version = "0.31", features = ["bundled"] }
mimalloc = "0.1"
regex = "1"
once_cell = "1"
regex-lite = "0.1"
rlimit = "0.10"
dirs = "6.0"
rustc-hash = "2"
rayon = "1"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["stream", "json", "rustls-tls", "blocking"] }
bytes = "1"
futures-util = "0.3"
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
tower-http = { version = "0.6", features = ["cors"] }
walkdir = "2"

[dev-dependencies]
tempfile = "3"
