[package]
name = "reliary-compress"
version = "0.4.1"
edition = "2021"
license = "MIT"
description = "Grammar-free code intelligence daemon, CLI, MCP server, and API proxy."
repository = "https://github.com/Reliary/reliary-agent"
homepage = "https://github.com/Reliary/reliary-agent"
[dependencies]
ahash = "0.8.12"
regex = "1.12.4"
regex-lite = "0.1"
