[package]
name = "reliary-core"
version = "0.5.1"
edition = "2021"
description.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
homepage = "https://github.com/Reliary/reliary-agent"
[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
