[package]
name = "reliary-fix"
version = "0.4.2"
edition = "2021"
license = "MIT"
description = "Grammar-free code intelligence daemon, CLI, MCP server, and API proxy."
repository = "https://github.com/Reliary/reliary-agent"
homepage = "https://github.com/Reliary/reliary-agent"
[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex-lite = "0.1"
