[package]
name = "reliary-fix"
version = "0.4.2"
edition = "2021"
description.workspace = true
repository.workspace = true
license.workspace = true
homepage = "https://github.com/Reliary/reliary-agent"
[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex-lite = "0.1"
