[package]
name = "reliary-memory"
version = "0.4.1"
edition = "2021"
license = "MIT"
description = "Grammar-free code intelligence daemon, CLI, MCP server, and API proxy."
repository = "https://github.com/Reliary/reliary-agent"
homepage = "https://github.com/Reliary/reliary-agent"
[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
rand = "0.8"
rand_chacha = "0.3"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
