[package]
name = "reliary-memory"
version = "0.5.0"
edition = "2021"
description.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
homepage = "https://github.com/Reliary/reliary-agent"
[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
rand = "0.8"
rand_chacha = "0.3"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
