[package]
name = "reliary-search"
version = "0.4.1"
edition = "2021"
license = "MIT"
description = "Grammar-free code intelligence daemon, CLI, MCP server, and API proxy."
repository = "https://github.com/Reliary/reliary-agent"
homepage = "https://github.com/Reliary/reliary-agent"
[dependencies]
serde = { version = "1", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled"] }
rayon = "1"
walkdir = "2"
rustc-hash = "2.1.2"
