[package]
name = "reliary-search"
version = "0.5.2"
edition = "2021"
description.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
homepage = "https://github.com/Reliary/reliary-agent"
[dependencies]
serde = { version = "1", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled"] }
rayon = "1"
walkdir = "2"
rustc-hash = "2.1.2"
